feat: add projects tests